--- a/src/pages/DashboardHome/DashboardHome.css
+++ b/src/pages/DashboardHome/DashboardHome.css
@@ -1,6 +1,6 @@
 /* Dashboard Home Styles - v4 Solid Colors - Feb 5 2026 */
 .dashboard-home {
-    padding: 30px;
+    padding: 0px 30px 30px 30px;
     max-width: 100%;
     margin: 0 auto;
     height: calc(100vh - 80px);
