--- a/src/pages/MealType/MealType.css
+++ b/src/pages/MealType/MealType.css
@@ -1,6 +1,6 @@
 /* MealType.css */
 .meal-type-container {
-    padding: 20px;
+    padding: 0px 20px 20px 20px;
     background-color: #f9fafb;
     min-height: 100%;
 }
